# stagdeck

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.windsurf/rules/: nicegui-basics.md
docs/: CODING_GUIDELINES.md  COLOR_SYSTEM.md  COMPONENTS.md  CUSTOM_SLIDES.md  GOALS.md  LAYOUT_SYSTEM.md  MARKDOWN_SLIDES.md  MASTER_SLIDE_CONCEPT.md  SECURITY.md  TESTING.md  THEME_CONCEPT.md
samples/: README.md
samples/default_deck_showcase/: README.md  main.py  slides.md
samples/default_deck_showcase/media/: README.md
stagdeck/: __init__.py  app.py  file_watcher.py  registry.py  renderer.py  slide.py  slide_deck.py  slide_element.py  viewer.py
stagdeck/components/: __init__.py  content_elements.py  markdown_parser.py  markdown_renderer.py  slide_layout.py
stagdeck/components/content_elements/: __init__.py  base.py  blockquote.py  bullet_list.py  code_block.py  media.py  mixed_content.py  numbered_list.py  paragraph.py  table.py
stagdeck/static/: scaling.js  styles.css
stagdeck/templates/: __init__.py
stagdeck/templates/decks/: __init__.py
stagdeck/templates/decks/default/: __init__.py  deck.py  master.py
stagdeck/templates/decks/default/slides/: __init__.py  blank.py  comparison.py  content.py  end.py  name_card.py  picture.py  picture_caption.py  quote.py  (+5 more)
stagdeck/templates/themes/: aurora.json  midnight.json
stagdeck/theme/: __init__.py  cache.py  context.py  evaluator.py  loader.py  styles.py  theme.py
stagdeck/utils/: __init__.py  image_processing.py  paths.py  pptx_loader.py
tests/: __init__.py  _server_runner.py  conftest.py  test_file_watcher.py  test_markdown_file.py  test_renderer.py  test_slide_deck.py  test_slide_element.py  test_viewer.py
tests/components/: __init__.py  test_content_elements.py  test_markdown_parser.py  test_slide_layout.py
tests/theme/: __init__.py  test_slide_deck_theme.py  test_theme_context.py  test_theme_loading.py  test_theme_styles.py
