[project]
name = "stagdeck"
version = "0.1.0"
description = "A NiceGUI-based presentation tool for creating and displaying slide decks"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    {name = "Michael Ikemann", email = "michael.ikemann@gmail.com"}
]
maintainers = [
    {name = "Michael Ikemann", email = "michael.ikemann@gmail.com"}
]
keywords = ["presentation", "slides", "nicegui", "slideshow", "deck"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Typing :: Typed",
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "nicegui>=3.3.1",
]

[project.urls]
Homepage = "https://github.com/Alyxion/stagdeck"
Repository = "https://github.com/Alyxion/stagdeck"
Issues = "https://github.com/Alyxion/stagdeck/issues"

[tool.poetry]
packages = [{include = "stagdeck"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
nicegui = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-p nicegui.testing.user_plugin"
